# code-reviewer

./: .gitignore  LICENSE  README.md  WRITEUP.md  pyproject.toml  review-pr.md  review.md
examples/: sample.py
src/code_reviewer/: cli.py  context.py  coordinator.py  orchestrator.py  preprocessing.py  report.py  schemas.py
src/code_reviewer/agents/: __init__.py  _prompts.py  correctness.py  performance.py  security.py
src/code_reviewer/ingestion/: language.py  loader.py  pr.py  types.py
src/code_reviewer/tools/: bandit_tool.py  pyright_tool.py  ruff_tool.py
