[project]
name = "code-reviewer"
version = "0.1.0"
description = "Multi-agent code review system"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=0.5.0",
    "google-genai>=0.3.0",
    "pydantic>=2.6",
    "click>=8.1",
    "rich>=13.7",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
    "pyright>=1.1.410",
    "ruff>=0.15.18",
    "bandit>=1.9.4",
]

[project.optional-dependencies]
pr = ["PyGithub>=2.3", "unidiff>=0.7"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
review = "code_reviewer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_reviewer"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
